# engine

./: Cargo.toml  README.md  plan.md  test.rb
examples/: simple.rs  test.rs
src/: lib.rs  loader.rs  waiter.rs
src/geometry/: cube.rs  mod.rs
src/geometry/projection/: mod.rs  standard.rs
src/material/: depth.rs  mod.rs
src/material/shaders/: depth.frag
src/mem/: buffer.rs  mod.rs  pending.rs
src/old/: loader.rs  shader.rs
src/old/geometry/: cube.rs  mod.rs
src/old/geometry/buffer/: vertices.rs
src/old/geometry/projection/: mod.rs
src/old/material/shaders/: depth.frag
src/old/mem/buffer/: mod.rs  raw.rs
src/old/scene/: mod.rs  node.rs  object.rs  references.rs  view.rs
src/old/scene/camera/: mod.rs  satellite.rs
src/old/util/: mod.rs  vector4d.rs
src/projection/: mod.rs  orthographic.rs  perspective.rs
src/render/: context.rs  generator.rs  mod.rs  pov.rs  target.rs
src/scene/: mod.rs  node.rs  object.rs
src/scene/camera/: mod.rs  satellite.rs
src/space/: mod.rs
src/sync/: command_buffer_pool.rs  conductor.rs  fence_pool.rs  mod.rs  thread.rs
src/sync/loader/: loading.rs  mod.rs  query.rs  thread.rs  worker.rs
src/util/: algebra.rs  matrix4x4.rs  mod.rs  ref_map.rs  vector2d.rs  vector3d.rs  vector4d.rs
src/view/: geometry.rs  mod.rs  object.rs
src/view/geometry/: mod.rs
src/view/geometry/projection/: mod.rs  standard.rs
src/view/geometry/projection/shaders/: standard.vert
src/view/material/: depth.rs  mod.rs
