[package]
name = "engine"
version = "0.1.0"
authors = ["Timothée Haudebourg <timothee.haudebourg@hemisemi.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "^0.20"
parking_lot = "*"
once_cell = "*"

vulkano-win = "^0.20"
winit = "*"
rand = "*"
bottle = { path = "../../utils/design/bottle" }
async-std = { version = "*", features = ["attributes"] }
crossbeam-channel = "*"
crossbeam-queue = "*"
