[package]
name = "engine"
version = "0.1.0"
authors = ["Timothée Haudebourg <timothee.haudebourg@hemisemi.fr>"]
edition = "2018"

[dependencies]
magma = { path = "../../../utils/graphics/magma" }
scene = { path = "../scene" }
cycles = { path = "../cycles" }
geometer = { path = "../geometer" }
crossbeam-queue = "^0.3"
once_cell = "*"

# bottle = { path = "../../utils/design/bottle" }
# entities = { path = "../../utils/design/entities" }
# async-std = { version = "*", features = ["attributes"] }
