[package]
name = "engine"
version = "0.1.0"
authors = ["Timothée Haudebourg <timothee.haudebourg@hemisemi.fr>"]
edition = "2018"

[dependencies]
magma = { path = "../../../utils/graphics/magma" }
scene = { path = "../scene" }
cycles = { path = "../cycles" }
geometer = { path = "../geometer" }
glam = "^0.12"
crossbeam-channel = "^0.5.0"
crossbeam-queue = "^0.3"
once_cell = "*"
parking_lot = "*"
log = "*"

# bottle = { path = "../../utils/design/bottle" }
# entities = { path = "../../utils/design/entities" }
# async-std = { version = "*", features = ["attributes"] }
